--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@tanstack/react-query": "^5.49.2",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6",
     "swiper": "^11.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
+    "typescript": "5.5.2"
   }
 }
