--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "sass": "^1.77.6",
     "swiper": "^11.1.4"
   },
