--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
@@ -21,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
+    "react-yandex-maps": "^4.6.0",
     "sass": "^1.77.6",
     "swiper": "^11.1.4"
   },
