--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-player": "^2.16.0",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
