--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
+    "next-intl": "^3.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
